test/types/records/split-init/error-never-initialized-values-not-mentioned4.good
error-never-initialized-values-not-mentioned4.chpl:3: In function 'error':
error-never-initialized-values-not-mentioned4.chpl:5: error: Cannot default-initialize a variable with generic type
error-never-initialized-values-not-mentioned4.chpl:5: note: 'q1' has generic type 'C?'
error-never-initialized-values-not-mentioned4.chpl:5: note: 'C?' now means nilable class with any management
error-never-initialized-values-not-mentioned4.chpl:5: note: to migrate old code, change it to 'borrowed C?'
